--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ env:
   # 1.  case CMS-Preview  (repository_dispatch event)   =>  preview
   # 2.  case PROD         (main branch)                 =>  www
   # 3.  otherwise                                       =>  dev
-  EC_DEPLOY_SUBDOMAIN: ${{((github.event_name == 'repository_dispatch') && 'preview') || ((github.ref_name == 'main') && 'www') || 'dev' }}
+  EC_DEPLOY_SUBDOMAIN: ${{ ((github.event_name == 'repository_dispatch') && 'preview') || ((github.ref_name == 'main') && 'www') || 'dev' }}
 
 jobs:
   ci:
@@ -42,10 +42,10 @@ jobs:
           node-version: 14
       - uses: actions/checkout@v3
         with:
-          submodules: ${{github.event_name != 'repository_dispatch'}}
+          submodules: ${{ github.event_name != 'repository_dispatch' }}
       - name: Load updates from submodule (select branch from dispatch event payload)
         if: github.event_name == 'repository_dispatch'
-        run: git clone --depth 1 --branch ${{github.event.client_payload.branch}} --single-branch https://github.com/EC-Nordbund/EC-Website-Content.git cms-content
+        run: git clone --depth 1 --branch ${{ github.event.client_payload.branch }} --single-branch https://github.com/EC-Nordbund/EC-Website-Content.git cms-content
       - name: Install dependencies
         run: yarn
       - name: Build
@@ -68,27 +68,27 @@ jobs:
 
       - name: Setup deploy
         run: |
-          echo "${{secrets.DEPLOY_KEY}}" > deploy_key
+          echo "${{ secrets.DEPLOY_KEY }}" > deploy_key
           chmod 600 ./deploy_key
 
       - name: Ensure Folder
         # if: github.event_name != 'push' || github.ref_name != 'main'
-        run: ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p {{ env.EC_DEPLOY_PATH }}"
+        run: ssh -i ./deploy_key -o StrictHostKeyChecking=no deployer@ec-nordbund.de "/bin/mkdir -p ${{ env.EC_DEPLOY_PATH }}"
 
       - name: Deploy to ec-nordbund.de
         run: |
           rsync -chrvz --stats --delete \
             -e 'ssh -i ./deploy_key -o StrictHostKeyChecking=no' \
-            ./dist/ deployer@ec-nordbund.de:{{ env.EC_DEPLOY_PATH }}
+            ./dist/ deployer@ec-nordbund.de:${{ env.EC_DEPLOY_PATH }}
 
       - name: Add deploy info for PRs
         if: github.event_name != 'repository_dispatch' && github.ref_name != 'main'
         uses: Sibz/github-status-action@v1
         with: 
-          authToken: ${{secrets.GITHUB_TOKEN}}
+          authToken: ${{ secrets.GITHUB_TOKEN }}
           context: 'deploy'
           description: Deployed on https://dev.ec-nordbund.de${{ env.EC_SET_BASE }}
           state: 'success'
           target_url: https://dev.ec-nordbund.de${{ env.EC_SET_BASE }}
-          sha: ${{github.sha}}
+          sha: ${{ github.sha }}
 
