--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,7 +66,7 @@ collections:
     format: 'frontmatter'
     create: true
     delete: false
-    slug: '{{year}}{{slug}}'
+    slug: '{{slug}}'
     preview_path: 'veranstaltungen/{{slug}}'
     media_folder: '/static/veranstaltungen'
     public_folder: 'veranstaltungen'
