move startseite config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,7 +33,7 @@ collections:
     files:
       - label: 'Startseite'
         name: 'startpage'
-        file: 'content/startseite.yml'
+        file: 'content/pages/startseite.yml'
         fields:
           - label: 'Countdown'
             name: 'countdown'
